Fixed: vertical scrollbar hidden in survey hiearchy tree (#2652)

--- a/webapp/views/App/views/Designer/SurveyHierarchy/SurveyHierarchy.scss
+++ b/webapp/views/App/views/Designer/SurveyHierarchy/SurveyHierarchy.scss
@@ -25,7 +25,6 @@
 
       svg {
         position: absolute;
-        height: 100%;
       }
 
       .node {
